[back] Refactoring : remove unnecessary map in saveDistinctGameMap